include/ceres/internal/port.h
@@ -35,7 +35,7 @@
 #ifdef __cplusplus
 
 #include "ceres/internal/config.h"
-
+#include "Eigen/Core"
 #if defined(CERES_TR1_MEMORY_HEADER)
 #include <tr1/memory>
 #else
@@ -48,6 +48,41 @@ namespace ceres {
 using std::tr1::shared_ptr;
 #else
 using std::shared_ptr;
+#endif
+
+// We allocate some Eigen objects on the stack and other places they
+// might not be aligned to 16-byte boundaries.  If we have C++11, we
+// can specify their alignment anyway, and thus can safely enable
+// vectorization on those matrices; in C++99, we are out of luck.  Figure out
+// what case we're in and write macros that do the right thing.
+#ifdef CERES_USE_CXX11
+namespace port_constants {
+
+static constexpr size_t kMaxAlignBytes =
+    // Work around a GCC 4.8 bug
+    // (https://gcc.gnu.org/bugzilla/show_bug.cgi?id=56019) where
+    // std::max_align_t is misplaced.
+#if defined (__GNUC__) && __GNUC__ == 4 && __GNUC_MINOR__ == 8
+    alignof(::max_align_t);
+#else
+    alignof(std::max_align_t);
+#endif
+
+static constexpr bool kShouldAlignMatrix = 16 <= kMaxAlignBytes;
+static constexpr size_t kAlignment = kShouldAlignMatrix ? 16 : 1;
+
+static constexpr int kEigenAlignmentHint =
+    kShouldAlignMatrix ? Eigen::AutoAlign : Eigen::DontAlign;
+}  // namespace port_constants
+
+#define CERES_ALIGNMENT_SPECIFIER alignas(::ceres::port_constants::kAlignment)
+#define CERES_MATRIX_ALIGN_HINT ::ceres::port_constants::kEigenAlignmentHint
+
+#else // !CXX_11
+
+#define CERES_ALIGNMENT_SPECIFIER
+#define CERES_MATRIX_ALIGN_HINT Eigen::DontAlign
+
 #endif
 
 }  // namespace ceres
